--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header class="page-header">
 
       <div class="container">
-      mister.arseniya@mail.ru
-      +79604368527
-      Russia/Krasnodar
+    <a class="header-email" href="mailto:mister.arseniya@mail.ru"> mister.arseniya@mail.ru</a>
+    <a class="header-phone" href="tel:+79604368527">+7 960 43 68 527</a>
+    Russia/Krasnodar
       </div>
     </header>
 
@@ -28,6 +28,9 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+  <img src="files/user2.jpg" width="410" height="536" alt="Фотография Неопознанного Енота">
+</figure>
       <h3>Пара слов о себе</h3>
       <p>Страдаю фигней,учусь верстать, люблю нюхать цветы</p>
       <h3>Чем могу быть полезен</h3>
@@ -38,8 +41,12 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
+      <figure class="project-image">
+        <img src="files/project.jpg" width="500" height="300" alt="Cайт инструктора Кекса">
+      </figure>
 
       <h3>Сайт инструктора Кекса</h3>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -49,6 +56,8 @@
 
     <footer class="page-footer">
       <div class="container">
+        <a class="footer-email" href="mailto:mister.arseniya@mail.ru"> mister.arseniya@mail.ru</a>
+    <a class="footer-phone" href="tel:+79604368527">+7 960 43 68 527</a>
       mister.arseniya@mail.ru
       +79604368527
       Russia/Krasnodar
