--- a/portfolio-step-1/index.html
+++ b/portfolio-step-1/index.html
@@ -28,27 +28,37 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <div class="container2">
+      <div class="left">
       <figure class="user-image">
   <img src="files/user2.jpg" width="410" height="536" alt="Фотография Неопознанного Енота">
-</figure>
+      </figure>
+      </div>
+<div class="text">
       <h3>Пара слов о себе</h3>
       <p>Страдаю фигней,учусь верстать, люблю нюхать цветы</p>
+
       <h3>Чем могу быть полезен</h3>
       <p>Сделать мир лучше</p>
       </div>
+  </div>
     </section>
 
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
+      <div class="container2">
+  <div class="left">
       <figure class="project-image">
         <img src="files/project.jpg" width="500" height="300" alt="Cайт инструктора Кекса">
       </figure>
-
+      </div>
+   <div class="text">
       <h3>Сайт инструктора Кекса</h3>
-      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <p>Небольшой лендинг о школе для начинающих.</p>
-
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
+      </div>
+     </div>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       </div>
@@ -58,7 +68,7 @@
       <div class="container">
         <a class="footer-email" href="mailto:mister.arseniya@mail.ru"> mister.arseniya@mail.ru</a>
     <a class="footer-phone" href="tel:+79604368527">+7 960 43 68 527</a>
-      
+
       Russia/Krasnodar
       </div>
     </footer>
