--- a/portfolio-step-1/index.html
+++ b/portfolio-step-1/index.html
@@ -68,8 +68,9 @@
       <div class="container">
         <a class="footer-email" href="mailto:mister.arseniya@mail.ru"> mister.arseniya@mail.ru</a>
     <a class="footer-phone" href="tel:+79604368527">+7 960 43 68 527</a>
+    <p> Russia/Krasnodar</p>
 
-      Russia/Krasnodar
+
       </div>
     </footer>
   </body>
